# ns-dbg

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
image_builder/: Cargo.toml
image_builder/src/: lib.rs
image_builder/src/debug-shell/: flake.nix
image_builder/src/etc/: zshrc
src/: base_image.rs  embedded_image.rs  image_builder.rs  lib.rs  main.rs  namespaces.rs  nixos.rs  nixpkgs.rs  overlay.rs  pid_file.rs  pid_lookup.rs  shared_mount.rs  shell.rs
src/debug-shell/: flake.nix
src/templates/: flake.nix
