[package]
name = "dive"
version = "0.1.1"
edition = "2021"

[features]
embedded_image = []

[workspace]
members = [
  "image_builder",
]

[workspace.dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive", "env"] }
env_logger = "0.11.5"
indicatif = "0.17.8"
log = "0.4.22"
liblzma = { version = "0.3.4", features = ["static"] }
rustix = { version = "0.38.37", features = ["process", "thread", "mount", "fs"] }
tar = "0.4.42"
tempfile = "3.13.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "5.0"
env_logger = { workspace = true }
exitcode = "1.1.2"
image_builder = { path = "image_builder" }
indicatif = { workspace = true }
log = { workspace = true }
liblzma = { workspace = true }
procfs = { version= "0.17.0" }
rustix = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = { workspace = true }
tempfile = { workspace = true }
which = "6.0.3"

[[bin]]
name = "dive"

[[bin]]
name = "build-img"
