[package]
name = "dive"
version = "0.1.2"
edition = "2021"

[features]
embedded_image = []

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive", "env"] }
dirs = "5.0"
env_logger = "0.11.5"
exitcode = "1.1.2"
fd-lock = "4.0.2"
include_dir = "0.7.4"
indicatif = "0.17.8"
liblzma = { version = "0.3.4", features = ["static"] }
log = "0.4.22"
procfs = { version= "0.17.0" }
regex = "1.11.1"
rustix = { version = "0.38.37", features = ["process", "thread", "mount", "fs", "runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tar = "0.4.42"
tempfile = "3.13.0"
ureq = { version = "2.10.1", default-features = false, features = ["tls", "native-certs", "gzip"] }
which = "6.0.3"

[[bin]]
name = "dive"

[[bin]]
name = "build-img"
