[package]
name = "image_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
indicatif = "0.17.8"
liblzma = { version = "0.3.4", features = ["static"] }
regex = "1.11.1"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls"] }
rustix = { version = "0.38.37", features = ["process", "thread", "mount", "fs", "runtime"] }
tar = "0.4.42"
tempfile = "3.13.0"

[[bin]]
name = "build-img"
