[package]
name = "image_builder"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
include_dir = "0.7.4"
indicatif = { workspace = true }
liblzma = { workspace = true }
log = { workspace = true }
regex = "1.11.1"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls"] }
rustix = { workspace = true, features = ["runtime"] }
tar = { workspace = true }
tempfile = { workspace = true }
